# aidale

./: ARCHITECTURE.md  Cargo.toml  PUBLISHING.md  README.md  REFACTORING_COMPLETE.md
aidale/: Cargo.toml
aidale-core/: Cargo.toml  README.md
aidale-core/src/: error.rs  layer.rs  lib.rs  plugin.rs  provider.rs  types.rs
aidale-core/src/runtime/: executor.rs  mod.rs
aidale-core/src/strategy/: json_output.rs  mod.rs
aidale-layer/: Cargo.toml  README.md
aidale-layer/src/: lib.rs  logging.rs  retry.rs
aidale-plugin/: Cargo.toml  README.md
aidale-plugin/src/: lib.rs  tool_use.rs
aidale-provider/: Cargo.toml  README.md
aidale-provider/src/: lib.rs  openai.rs
aidale/examples/: basic.rs  deepseek.rs
aidale/src/: lib.rs
scripts/: check.sh  dry-run.sh  publish.sh
