[workspace]
resolver = "2"
members = [
    "aidale",
    "aidale-core",
    "aidale-provider",
    "aidale-layer",
    "aidale-plugin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hanxuanliang/aidale"
homepage = "https://github.com/hanxuanliang/aidale"
documentation = "https://docs.rs/aidale"
authors = ["hanxuanliang"]
keywords = ["ai", "llm", "openai", "sdk", "async"]
categories = ["api-bindings", "asynchronous"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
pin-project = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0.4"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# OpenAI
async-openai = "0.30.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
arc-swap = "1.6"
dashmap = "6.1.0"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Stream utilities
async-stream = "0.3"
tokio-stream = "0.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
