[package]
name = "aidale-layer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Built-in layers for Aidale (logging, retry, caching, etc.)"

[dependencies]
aidale-core = { version = "0.1.0", path = "../aidale-core" }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
async-stream = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
