[package]
name = "aidale-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AI provider implementations for Aidale (OpenAI, Anthropic, etc.)"

[dependencies]
aidale-core = { path = "../aidale-core" }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
async-openai = { workspace = true }
tracing = { workspace = true }
async-stream = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
